--- a/css/styles.css
+++ b/css/styles.css
@@ -243,14 +243,14 @@ nav .links a {
 }
 
 #story .images {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    margin-top: 5rem;
+    display: grid;
+    grid-template-columns: 33.3% 33.3% 33.3%;
+    margin: 4rem 0 0;
 }
 
 #story .images img {
-    width: 33.3%;
+    width: 100%;
+    height: auto;
 }
 
 /** FEEDBACKS **/
