--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
 
-html, body {
+html,
+body {
     margin: 0;
     font-family: "Poppins", sans-serif;
     color #222222;
@@ -42,7 +43,7 @@ section {
     align-items: center;
 }
 
-.section-image{
+.section-image {
     width: 70%;
 }
 
@@ -65,7 +66,7 @@ section {
 }
 
 /** Header **/
-nav{
+nav {
     display: flex;
     justify-content: space-between;
 }
@@ -90,7 +91,7 @@ nav .links a {
     height: 38px;
     background: url('../images/icon.png');
     background-size: cover;
-    margin-right:10px;
+    margin-right: 10px;
     vertical-align: middle;
 }
 
@@ -105,12 +106,12 @@ nav .links a {
     text-align: center;
 }
 
-.social-icon:first-child{
-    margin-right:1rem;
+.social-icon:first-child {
+    margin-right: 1rem;
 }
 
 .facebook:before {
-    content:"";
+    content: "";
     display: inline-block;
     width: 9px;
     height: 36px;
@@ -120,7 +121,7 @@ nav .links a {
 }
 
 .instagram:before {
-    content:"";
+    content: "";
     display: inline-block;
     width: 18px;
     height: 18px;
@@ -170,7 +171,7 @@ nav .links a {
 #widgets .section-image img {
     width: 218px;
     height: auto;
-    box-shadow: 0px 0px 100px rgba(0,0,0, 0.1);
+    box-shadow: 0px 0px 100px rgba(0, 0, 0, 0.1);
 }
 
 #widgets .section-image img:first-child {
@@ -193,7 +194,7 @@ nav .links a {
     padding: 9rem 0;
 }
 
-#watch .section-image img{
+#watch .section-image img {
     width: 345px;
     height: auto;
 }
@@ -230,6 +231,7 @@ nav .links a {
     font-weight: 500;
     margin-bottom: 1rem;
 }
+
 #story .part p {
     max-width: 80%;
     margin: auto;
@@ -302,7 +304,7 @@ nav .links a {
 }
 
 #footer h2 {
-   margin-bottom: 1rem;
+    margin-bottom: 1rem;
 }
 
 #footer p {
@@ -310,7 +312,7 @@ nav .links a {
     margin: auto;
 }
 
-#footer .social{
+#footer .social {
     margin-top: 2rem;
 }
 
@@ -330,13 +332,62 @@ nav .links a {
     font-weight: 300;
 }
 
+#faq {
+    padding: 0 15px;
+}
+
+#accordion h3 {
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+    padding-bottom: 12px;
+    font-weight: 600;
+    cursor: pointer;
+}
+
+.gif-image {
+    border-radius: 10px;
+    box-shadow: 0px 0px 16px rgba(0, 0, 0, 0.2);
+}
+
+.accordion_content {
+    margin-left: 25px;
+}
+
+#accordion h3 .bullet {
+    display: inline-block;
+    padding-right: 10px;
+}
+
+#accordion h3 .bullet .arr {
+    display: inline-block;
+    color: #1FCC67;
+    font-size: 12px;
+}
+
+#accordion ol {
+    text-align: left;
+    margin-bottom: 20px;
+}
+
+.accordion_content.left-position {
+    margin-left: 0px;
+}
+
+.accordion_content.left-position img {
+    margin-left: 20px;
+}
+
+#accordion h3[aria-expanded="true"]>.bullet>.arr {
+    -webkit-transform: rotate(90deg);
+    transform: rotate(90deg);
+}
+
 /** MOBILE **/
-@media (max-width: 1024px){
-    .half-section-wrapper{
+@media (max-width: 1024px) {
+    .half-section-wrapper {
         flex-direction: column;
     }
 
-    .half-section{
+    .half-section {
         text-align: center;
         margin: auto;
     }
@@ -360,15 +411,15 @@ nav .links a {
         height: auto;
         padding: 2rem;
     }
-    
+
     #intro .social {
-	    display: none;
+        display: none;
     }
-    
-     #intro h1 {
-	     font-size: 40px;
-	     line-height: 40px;
-     }
+
+    #intro h1 {
+        font-size: 40px;
+        line-height: 40px;
+    }
 
     .intro-content-text {
         max-width: 100%;
@@ -424,15 +475,15 @@ nav .links a {
     }
 
     #watch .section-image {
-        padding:  0 0 3rem;
+        padding: 0 0 3rem;
     }
 
     #story .parts-wrapper {
         flex-direction: column;
     }
-    
+
     #story .images {
-	    grid-template-columns: unset;
+        grid-template-columns: unset;
     }
 
     #feedback {
