--- a/css/styles.css
+++ b/css/styles.css
@@ -133,7 +133,7 @@ nav .links a {
 
 /** INTRO **/
 #intro {
-    background: url('../images/intro_bg_min.png');
+    background: url('../images/intro_bg_min2.png');
     background-size: cover;
     height: auto;
     padding: 2.8rem 0 0;
